Grace/tests/gibbs/errors/t087.grace
// ERROR = P1036
"a" ++ () ++ "c"
